@startuml

AbstractAircraft <|-- HeroAircraft
BaseGame ..> AbstractAircraft

abstract class BaseGame{}

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
}

class HeroAircraft {
    - fireActivated:Boolean
    - heroAircraft:HeroAircraft
    - HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static}getHeroAircraft():HeroAircraft
    + increaseHp(int increment):void
    + setFireActivated(Boolean flag):void
    + getFireActivated():Boolean
    + forward():void
    + shoot():List<BaseBullet>
}

@enduml